refazer o swagger e fazer um teste de permissoes
